z-index bug

--- a/src/front/styles/_home.scss
+++ b/src/front/styles/_home.scss
@@ -9,8 +9,9 @@
 @import "variables";
 
 .container-fluid {
-  padding-left: 1.5rem;
-  padding-right: 1.5rem;
+  // padding-left: 1.5rem;
+  // padding-right: 1.5rem;
+  padding: 0;
 }
 
 .jumbo {
@@ -18,7 +19,7 @@
   background-size: cover;
   width: 100%;
   height: 20rem;
+  text-align: center;
   color: white;
   padding-top: 2.5rem;
-  text-align: center;
 }
