--- a/src/front/styles/_leaf-map.scss
+++ b/src/front/styles/_leaf-map.scss
@@ -1,4 +1,5 @@
 .leaflet-container {
+  position: static;
   width: 100%;
   height: calc(100vh - 20rem);
 }
